--- a/ColabRemote.ipynb
+++ b/ColabRemote.ipynb
@@ -45,8 +45,9 @@
         "id": "ezfUxnARP57u"
       },
       "source": [
-        "套件安裝\n",
-        "\n"
+        "##套件安裝(必要)\n",
+        "\n",
+        "如果只想使用code-server，可以使用選項二，可花較少的時間完成安裝。"
       ]
     },
     {
@@ -55,7 +56,7 @@
         "id": "HKeTwz51KHZa"
       },
       "source": [
-        "套件選項一: 安裝VNCServer要使用novnc，安裝較花時間。"
+        "套件選項一: 安裝VNCServer要使用novnc，安裝花較多時間。"
       ]
     },
     {
@@ -95,7 +96,7 @@
         "id": "iveAdS6pLsmN"
       },
       "source": [
-        "建立Openss金鑰"
+        "###建立Openss金鑰(必要)"
       ]
     },
     {
@@ -188,7 +189,8 @@
         "id": "yc5GO65A6la0"
       },
       "source": [
-        "公鑰新增，查看下方公鑰結\b果，並將此公鑰加入到我們的colab容器中"
+        "##公鑰新增\n",
+        "查看下方公鑰結\b果，並將此公鑰加入到我們的colab容器中"
       ]
     },
     {
@@ -228,7 +230,9 @@
         "id": "Mr7L1UW7dpBu"
       },
       "source": [
-        "將遠端主機容器內的金鑰，新增到自己colab的authorzied_keys中"
+        "將遠端主機容器內的金鑰，新增到自己colab vm的authorzied_keys中。\n",
+        "> 1.連到容器上，並產生金鑰 (**注意: 原有的金鑰會被覆寫哦**)<br/>\n",
+        ">2.將容器上的colab公鑰，考貝回colab的root的~/.ssh/authorized_keys"
       ]
     },
     {
@@ -249,7 +253,8 @@
         "id": "iEMBBcmQQeRA"
       },
       "source": [
-        "一、關於VNC Server"
+        "##一、關於VNC Server\n",
+        "搭配Github上的deviny/colab就能在Web透過VNC連上colab vm服務。"
       ]
     },
     {
@@ -361,8 +366,8 @@
         "id": "5uMpcpcx7Sdk"
       },
       "source": [
-        "二、公開colab的openssh連接埠\n",
-        "\n"
+        "##二、公開colab的openssh連接埠\n",
+        "如果您想直接使用SSH連線到colab的VM上\n"
       ]
     },
     {
@@ -434,9 +439,11 @@
         "id": "OMso0zkZn0Ps"
       },
       "source": [
-        "三、安裝code-server\n",
+        "##三、安裝code-server\n",
         "\n",
-        "----\n"
+        "使用vscode進行開發，在網頁上進行開發。\n",
+        "\n",
+        "並且可以存接存取在terminal上的VM哦。\n"
       ]
     },
     {
