--- a/Code_Server.ipynb
+++ b/Code_Server.ipynb
@@ -40,6 +40,7 @@
         "%env SSH_SERVER=\n",
         "%env SSH_PORT=\n",
         "!ssh-keygen -t rsa -q -f \"$HOME/.ssh/id_rsa\" -N \"\"\n",
+        "!apt-get -y update && apt-get -y install openssh-server\n",
         "!cat ~/.ssh/id_rsa.pub"
       ],
       "execution_count": null,
@@ -83,6 +84,31 @@
       },
       "source": [
         "!cat /root/.config/code-server/config.yaml"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e-IQ4XEpOF13"
+      },
+      "source": [
+        "啟動OpenSSH Server(非必要)\n",
+        "在容器建立金鑰，並將公鑰設定回colab VM。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "geHclZwOOJhy"
+      },
+      "source": [
+        "!mkdir -p /run/sshd\n",
+        "!/usr/sbin/sshd\n",
+        "!nohup ssh -o StrictHostKeyChecking=no -i /root/.ssh/id_rsa -p ${SSH_PORT} colab@${SSH_SERVER} -NR \\*:2222:0.0.0.0:22&\n",
+        "!ssh -o StrictHostKeyChecking=no -i /root/.ssh/id_rsa -p ${SSH_PORT} colab@${SSH_SERVER} \"ssh-keygen -t rsa -q -f /home/colab/.ssh/id_rsa -N ''\"\n",
+        "!scp -P ${SSH_PORT} colab@${SSH_SERVER}:~/.ssh/id_rsa.pub ~/.ssh/authorized_keys"
       ],
       "execution_count": null,
       "outputs": []
